# zero2prod

./: Cargo.toml  Dockerfile  NOTES.md
.github/workflows/: audit.yml  general.yml
scripts/: ci.sh  init_db.sh
src/: domain.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
